:hammer: Fixed the footer floating up too high on desktop. Mobile remains untouched.

--- a/devwp/sass/components/_footer.scss
+++ b/devwp/sass/components/_footer.scss
@@ -28,4 +28,10 @@
   }
 }
 
+@media screen and (min-width: 40em) {
+  .footer {
+    margin-bottom: 0;
+  }
+}
+
 
